--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,140 +1,17 @@
 @use 'sass:list';
-@import './reset';
-
-// Colors
-
-// Primary
-$bright-orange: hsl(31deg 77% 52%);
-$dark-cyan: hsl(184deg 100% 22%);
-$very-dark-cyan: hsl(179deg 100% 13%);
-
-// Neutral
-$transparent-white: hsl(0deg 0% 100% / 75%);
-$very-light-gray: hsl(0deg 0% 95%);
-
-// Card
-$card-width-mobile: 20.438rem;
-$card-height-mobile: 27.625rem;
-$card-width-desktop: 19.188rem;
-$card-height-desktop: 31.25rem;
-$card-overlap-margin: -1.5rem;
-$card-border-radius: 0.5rem;
-$card-color-order: $bright-orange, $dark-cyan, $very-dark-cyan;
-
-// Typography
-@mixin font-normal {
-  font-family: 'Lexend Deca', sans-serif;
-  font-weight: 400;
-}
-
-@mixin font-bold {
-  font-family: 'Big Shoulders Display', sans-serif;
-  font-weight: 700;
-}
-
-@mixin card($color, $index) {
-  background-color: $color;
-
-  @if $index == 1 {
-    border-top-left-radius: $card-border-radius;
-    border-top-right-radius: $card-border-radius;
-  }
-
-  @if $index == 3 {
-    border-bottom-right-radius: $card-border-radius;
-    border-bottom-left-radius: $card-border-radius;
-  }
-
-  @media (min-width: 1440px) {
-    @if $index == 1 {
-      border-top-left-radius: $card-border-radius;
-      border-top-right-radius: unset;
-      border-bottom-left-radius: $card-border-radius;
-    }
-
-    @if $index == 3 {
-      border-top-right-radius: $card-border-radius;
-      border-bottom-right-radius: $card-border-radius;
-      border-bottom-left-radius: unset;
-    }
-  }
-
-  button {
-    color: $color;
-
-    &:hover {
-      background-color: $color;
-      color: $very-light-gray;
-    }
-  }
-}
+@import '@/assets/styles/reset';
+@import '@/assets/styles/variables';
 
 body {
   display: flex;
-  height: 100vh;
+  //height: 100vh;
+  margin-bottom: 10rem;
+  background-color: $background;
   font-size: 0.938rem;
   place-content: center;
-}
 
-.cards {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  justify-items: center;
-  align-content: start;
-  margin-top: 5.5rem;
-
-  @media (min-width: 1440px) {
-    grid-column-gap: 0;
-    grid-template-columns: repeat(3, 1fr);
-    max-width: calc($card-width-desktop * 3);
-  }
-
-  .card {
-    display: grid;
-    grid-template-rows: 4.3rem 4.9rem 9.4rem 1fr;
-    width: $card-width-mobile;
-    height: $card-height-mobile;
-    padding: 3rem 3rem 0;
-
-    @media (min-width: 1440px) {
-      width: $card-width-desktop;
-      height: $card-height-desktop;
-    }
-
-    @for $i from 1 through list.length($card-color-order) {
-      &:nth-child(#{$i}) {
-        @include card(nth($card-color-order, $i), $i);
-      }
-    }
-
-    h2 {
-      @include font-bold;
-
-      color: $very-light-gray;
-      font-size: 2.5rem;
-      text-transform: uppercase;
-    }
-
-    p {
-      @include font-normal;
-
-      color: $transparent-white;
-      line-height: 1.563rem;
-    }
-
-    button {
-      @include font-normal;
-
-      width: 7.2rem;
-      height: 1.3rem;
-      padding: 0.7rem 0.9rem;
-      border: 0.125rem solid $very-light-gray;
-      border-radius: 2rem;
-      background-color: $very-light-gray;
-      letter-spacing: 0;
-      line-height: 1rem;
-      text-align: center;
-      cursor: pointer;
-    }
+  @media screen and (min-width: 1440px) {
+    place-content: center;
+    margin-top: 7rem;
   }
 }
